<resources>
    <string name="app_name">RssAI</string>
    <string name="str_main_home">资讯</string>
    <string name="str_main_subscription">订阅</string>
    <string name="str_rf_subscription">订阅开发中。。。</string>
    <string name="str_loading">数据加载中。。。</string>
    <string name="str_main_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_rf_mine">我的开发中。。。</string>
    <string name="str_sf_new_collection">收藏</string>
    <string name="str_asa_btn_save">保存</string>
    <string name="str_asa_hint_name">请输入源名称</string>
    <string name="str_asa_hint_url">请输入源链接</string>
    <string name="str_asa_title">订阅RSS源</string>
    <string name="str_sla_title">频道列表</string>

    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="str_no_data">没有更多数据</string>

    <string name="str_mf_user_center">个人中心</string>
    <string name="str_mf_message_center">消息中心</string>
    <string name="str_mf_collection">我的收藏</string>
    <string name="str_mf_setting">设置</string>
    <string name="str_coll_title">我的收藏</string>
    <string name="str_sa_update">检查更新</string>
    <string name="str_sa_about">关于我们</string>
    <string name="str_sa_share">分享好友</string>
    <string name="str_sa_opr_image">图片显示</string>
    <string name="str_sa_day_night">夜间模式</string>
    <string name="str_sa_title">设置</string>
    <string name="str_aa_title">关于我们</string>
    <string name="app_about">人的思维不应该被固化，思维边界不应该被限定，思想更不应该被禁锢在盒子里。阅读是我们获取知识的一种方式，引发我们思考，从思考中获得启发。</string>
    <string name="app_desigin_think">设计理念：极简主义</string>
    <string name="str_mf_no_login">登录体验更多功能</string>
    <string name="str_sa_change_source">订阅资讯</string>
    <string name="str_hta_title">热门订阅</string>
    <string name="str_qa_title">二维码</string>
    <string name="str_sf_new_share">分享</string>
    <string name="sub_label">专属.订阅</string>
    <string name="sub_recommend_label">热门.推荐</string>
    <string name="str_load_txt">阅读优质内容</string>
    <string name="str_mf_scan">扫一扫</string>
    <string name="str_sf_view_all"><![CDATA[>]]></string>
    <string name="str_sf_view_change">换一换</string>
    <string name="str_sub_title">我的订阅</string>
    <string name="str_sub_tv_all">查看全部</string>
    <string name="str_sa_advice">反馈意见</string>
    <string name="str_asa_btn_opml">导入OPML文件</string>
    <string name="str_main_find">发现</string>
    <string name="ff_find_more_label">发现更多</string>
    <string name="ff_find_topic_label">专题推荐</string>
    <string name="ff_find_hot_label">推荐主题</string>
    <string name="str_ff_tv_change">换一换</string>
    <string name="str_ff_tv_more">更多</string>
    <string name="str_asa_hint_key">百度新闻关键字订阅</string>
    <string name="str_advice_title">反馈意见</string>
    <string name="hint_str_aa_advice">请输入反馈内容，限140字</string>
    <string name="str_la_btn_login">登录</string>
    <string name="str_la_title">登录</string>
    <string name="str_message_title">消息中心</string>
    <string name="str_message_content_title">消息详情</string>
    <string name="str_la_hint_uname">请输入账号</string>
    <string name="str_la_hint_upsd">请输入密码</string>
    <string name="str_ra_btn_register">注册</string>
    <string name="str_ra_hint_spsd">确认新密码</string>
    <string name="str_ra_hint_psd">请输入密码</string>
    <!--密码限制-->
    <string name="dig_str">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="str_ra_title">注册</string>
    <string name="ff_find_like_label">相关资讯</string>
    <string name="str_mf_scan_label">资讯分享与互动</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="sub_label_topic">站内.订阅</string>
    <string name="str_rta_view_res_article">查看原文</string>
    <string name="str_mf_search">搜一搜</string>
    <string name="str_mf_search_label">搜新闻与搜主题</string>
    <string name="search_title">请输入关键字</string>
    <string name="str_aa_btn_search">搜索</string>
    <string name="str_user_title">个人资料</string>
    <string name="str_sex">性别</string>
    <string name="str_nick_name">昵称</string>
    <string name="str_birth">生日</string>
    <string name="str_signature">个性签名</string>
    <string name="str_la_btn_login_out">退出登录</string>
    <string name="str_ama_tv_signature">点击设置个性签名</string>
    <string name="str_ama_tv_birth">点击设置生日</string>
    <string name="str_ama_nick_name">点击设置昵称</string>
    <string name="str_ama_sex">点击设置性别</string>
    <string name="esa_str_signature">写下你的个性签名。。。</string>
    <string name="str_la_btn_signature">保存</string>
    <string name="str_signature_title">个性签名</string>

    <string name="str_pop_avanew">修改头像</string>
    <string name="str_pop_canmara">拍照上传</string>
    <string name="str_pop_local">本地上传</string>
    <string name="str_la_btn_offline">离线下载</string>
    <string name="str_offline_title">离线下载</string>
    <string name="title_activity_test_nav">TestNavActivity</string>
    <string name="title_home">资讯</string>
    <string name="title_subscribe">订阅</string>
    <string name="title_find">发现</string>
    <string name="title_mine">我的</string>

</resources>
