<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_source"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/asa_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_asa_hint_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/asa_et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_asa_hint_url"
            android:padding="10dp" />

        <Button
            android:id="@+id/asa_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_asa_btn_save" />
    </LinearLayout>
</LinearLayout>
