<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/include_toolbar" />
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/fm_ll_avatar"
                style="@style/InfoDetail"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_place" />

            </RelativeLayout>

            <View style="@style/view_line_h" />

            <View
                style="@style/view_line_h"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/fm_ll_userCenter"
                style="@style/InfoDetail"
                android:padding="16dp">

                <TextView
                    style="@style/TextLabel"
                    android:text="@string/str_mf_user_center" />

            </RelativeLayout>

            <View style="@style/view_line_h" />

            <RelativeLayout
                android:id="@+id/fm_ll_message"
                style="@style/InfoDetail"
                android:padding="16dp">

                <TextView
                    style="@style/TextLabel"
                    android:text="@string/str_mf_message_center" />

            </RelativeLayout>

            <View style="@style/view_line_h" />


            <RelativeLayout
                android:id="@+id/fm_ll_collection"
                style="@style/InfoDetail"
                android:padding="16dp">

                <TextView
                    style="@style/TextLabel"
                    android:text="@string/str_mf_collection" />

            </RelativeLayout>

            <View style="@style/view_line_h" />

            <View
                style="@style/view_line_h"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/fm_ll_setting"
                style="@style/InfoDetail"
                android:padding="16dp">

                <TextView
                    style="@style/TextLabel"
                    android:text="@string/str_mf_setting" />

            </RelativeLayout>

            <View style="@style/view_line_h" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
