<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/title_all"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/include_sub_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/material_card"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="4dp">

            <LinearLayout
                style="@style/InfoDetail"
                android:background="@color/white"
                android:gravity="center">

                <EditText
                    android:id="@+id/ra_et_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:digits="@string/dig_str"
                    android:hint="@string/str_la_hint_uname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColorHint="#BBBBBB"
                    android:textSize="@dimen/s16p"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg"/>

            <LinearLayout
                style="@style/InfoDetail"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ra_et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/trans"
                    android:digits="@string/dig_str"
                    android:hint="@string/str_ra_hint_psd"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColorHint="#BBBBBB"
                    android:textSize="@dimen/s16p"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg"/>

            <LinearLayout
                style="@style/InfoDetail"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ra_et_spassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/trans"
                    android:digits="@string/dig_str"
                    android:ems="16"
                    android:hint="@string/str_ra_hint_spsd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:textColorHint="#BBBBBB"
                    android:textSize="@dimen/s16p"/>

                <CheckedTextView
                    android:id="@+id/ra_chktv_spsd_control"
                    android:layout_width="30dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/chktv_selector"
                    android:button="@null"
                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/ra_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/opr_bg_selector"
            android:text="@string/str_ra_btn_register"
            android:textColor="@color/orange"
            android:textSize="@dimen/s16p"/>

    </LinearLayout>
</LinearLayout>