<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_root_view"
                style="@style/title_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/main_bottom_bg"
        android:orientation="horizontal"
        android:paddingTop="3dp">

        <LinearLayout
            android:id="@+id/main_bottom_layout_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_home_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/main_home"/>

            <TextView
                android:id="@+id/main_bottom_home_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/str_main_home"
                android:textSize="@dimen/s12p"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bottom_layout_subscription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_subscription_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/main_subscription"/>

            <TextView
                android:id="@+id/main_bottom_subscription_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/str_main_subscription"
                android:textSize="@dimen/s12p"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bottom_layout_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_find_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/main_find"/>

            <TextView
                android:id="@+id/main_bottom_find_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/str_main_find"
                android:textSize="@dimen/s12p"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_bottom_layout_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_mine_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/main_user_male"/>

            <TextView
                android:id="@+id/main_bottom_mine_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/str_main_mine"
                android:textSize="@dimen/s12p"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/ma_view"
        style="@style/SplitLine_h"
        android:layout_above="@id/main_bottom_layout"/>

    <FrameLayout
        android:id="@+id/ma_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ma_view"
        android:background="@color/bg"/>
</RelativeLayout>
